Refactor of main classes